<resources>
  <string name="app_name">Covid 19 Updates</string>

  <string name="title_home">Home</string>
  <string name="title_hospital_updates">Hospital Live Updates</string>
  <string name="title_hospital_details">Hospital Details</string>
  <string name="title_live_updates">Live Updates</string>

  <string name="main_hospital_update_desc">Sri Lanka main hospital\'s \n live update</string>
  <string name="see_main_hospital_update_desc">See Sri Lanka main hospital\'s \n live update</string>
  <string name="live_update_desc">World wide &amp; Sri Lanka\'s live update</string>
  <string name="label_patient_count_desc">Total admitted patient count : </string>
  <string name="label_see_more">See more</string>
  <string name="label_title_desc">Total number of patients admitted and under diagnosis for Covid 19.</string>

  <string name="label_hospital_name">Hospital Name</string>
  <string name="label_local_patient_count">Local patient count</string>
  <string name="label_foreign_patient_count">Foreign patient count</string>
  <string name="label_total_patient_count">Total patient count</string>

  <string name="label_sri_lanka">Sri Lanka</string>
  <string name="label_world">World Wide</string>

  <string name="label_new_cases">New cases recorded</string>
  <string name="label_total_cases">Total cases recorded</string>
  <string name="label_active_cases">Current active cases</string>
  <string name="label_all_deaths">Total deaths recorded</string>
  <string name="label_new_deaths">New deaths recorded</string>
  <string name="label_recovered">Recovered patient count</string>
  <string name="label_total_in_hospital">Total patients in hospitals</string>
  <string name="label_update_time_desc">According to the latest record by HEALTH PROMOTION BUREAU on </string>

  <string name="label_network_error">"Sorry. We cannot connect to the server right now. Let's try again later."</string>
  <string name="label_no_internet">Seems something wrong with your network connection. Please check it and try again later.</string>
</resources>
